--- a/localization/russian/event_localization/proxy_events_l_russian.yml
+++ b/localization/russian/event_localization/proxy_events_l_russian.yml
@@ -1,10 +1,10 @@
 ﻿l_russian:
- proxy_war.0001.t:0 "A Call To War" #NT!
- proxy_war.0001.desc:0 "We have recieved a messenger from [actor.GetName]'s court carrying with it a proposal to go to war against [recipient.GetName] to weaken their position. They will reward us for our efforts but no help will be granted directly.\nAlthough this might align with our interests, we will be left stranded if [recipient.GetFirstName] proves to be difficult to defeat" #NT!
- proxy_war.0001.option.a:0 "We will honour the call!" #NT!
- proxy_war.0001.option.b:0 "We won't dance like puppets on a string!" #NT!
- PROXY_WAR_ACCEPTED:0 "Our Proposal Was Accepted!" #NT!
- PROXY_WAR_ACCEPTED_desc:0 "[secondary_actor.GetShortUINameNoTooltip] has honoured our call and attacked [recipient.GetFirstName]" #NT!
- PROXY_WAR_DECLINED:0 "Our Call Declined!" #NT!
- PROXY_WAR_DECLINED_desc:0 "[secondary_actor.GetShortUINameNoTooltip] didn't accept our call and won't attack [recipient.GetFirstName]" #NT!
- GLORYHOUNDS:0 "Gloryhounds" #NT!
+ proxy_war.0001.t:0 "Призыв к войне"
+ proxy_war.0001.desc:0 "Вы принимаете посланника от двора [actor.GetName] с предложением начать войну против [recipient.GetName] чтобы ослабить их позиции. Они вознаградят нас за наши усилия, но помощь не будет предоставлена напрямую.\nХотя это может соответствовать нашим интересам, мы окажемся в затруднительном положении, если [recipient.GetFirstName] окажется трудно победить."
+ proxy_war.0001.option.a:0 "Мы ответим на призыв!"
+ proxy_war.0001.option.b:0 "Мы не будем танцевать, как марионетки на ниточке!"
+ PROXY_WAR_ACCEPTED:0 "Наше предложение было принято!"
+ PROXY_WAR_ACCEPTED_desc:0 "[secondary_actor.GetShortUINameNoTooltip] ответил на наш призыв и атаковал [recipient.GetFirstName]"
+ PROXY_WAR_DECLINED:0 "Наш призыв был отклонен!"
+ PROXY_WAR_DECLINED_desc:0 "[secondary_actor.GetShortUINameNoTooltip] отклонил наш призыв и не атакует [recipient.GetFirstName]"
+ GLORYHOUNDS:0 "Гончие славы"
